--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My webpage</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-  
+
 
   </head>
   <body>
@@ -54,7 +54,11 @@
     <h3>Media-query</h3>
     <a href="#">link</a>
     <p>This website show how media query is done</p>
-
+  </div>
+  <div class="panel">
+    <h3>festivities</h3>
+    <a href="#">link</a>
+    <p>This non pair catering website</p>
   </div>
 </div>
 
