--- a/about.html
+++ b/about.html
@@ -7,8 +7,10 @@
   </head>
   <body>
   <h1>Emmahrose</h1>
-  <p>Emmahrose is a kenyan citizen, student,entreprenuer and also a co-owner of omexIT company.
-  In addition,she a happy and accomodating person.</p>
+  <p>Emmahrose is a kenyan citizen, student,entreprenuer and also a co-owner of
+    omexIT company.She is a kind-hearted caring individual that looks out for
+    others and always looking out for family.
+   she has a good view on life and the happiest</p>
 
   <h3 style="color: blue">Occupation</h3>
   <ul>
