changes in html

--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
     </div>
 <div class="panel">
   <h3>My-first-website</h3>
-  <a href="#">https://github.com/emmahrose/my-first-webpage.git</a>
+  <a href="link">"https://github.com/emmahrose/my-first-webpage.git"</a>
   <p>It is website that brings out the use off commind lines and creating the HTML.
   </p>
   </div>
   <div class="panel">
     <h3>Branches-webproject</h3>
-    <a href="#">https://github.com/emmahrose/branches-webproject.git</a>
+    <a href="link">https://github.com/emmahrose/branches-webproject.git</a>
     <p>This website shows how branching is done</p>
   </div>
   <div class="panel">
     <h3>Media-query</h3>
-    <a href="#">https://github.com/emmahrose/media-queary.git</a>
+    <a href="link">https://github.com/emmahrose/media-queary.git</a>
     <p>This website show how media query is done</p>
   </div>
   <div class="panel">
     <h3>festivities</h3>
-    <a href="#">https://github.com/emmahrose/Festivities.git</a>
+    <a href="link">https://github.com/emmahrose/Festivities.git</a>
     <p>This non pair catering website</p>
   </div>
 
