--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
   </ul>
     </div>
 <div class="panel">
-  <h3>My-first-website</h3>
-  <a href="link">"https://github.com/emmahrose/my-first-webpage.git"</a>
+
+  <a href="https://github.com/emmahrose/my-first-webpage.git"><h3>My-first-website</h3></a>
   <p>It is website that brings out the use off commind lines and creating the HTML.
   </p>
   </div>
   <div class="panel">
-    <h3>Branches-webproject</h3>
-    <a href="link">https://github.com/emmahrose/branches-webproject.git</a>
+
+    <a href="https://github.com/emmahrose/branches-webproject.git"><h3>Branches-webproject</h3></a>
     <p>This website shows how branching is done</p>
   </div>
   <div class="panel">
-    <h3>Media-query</h3>
-    <a href="link">https://github.com/emmahrose/media-queary.git</a>
+
+    <a href="https://github.com/emmahrose/media-queary.git"><h3>Media-query</h3></a>
     <p>This website show how media query is done</p>
   </div>
   <div class="panel">
     <h3>festivities</h3>
-    <a href="link">https://github.com/emmahrose/Festivities.git</a>
+    <a href="https://github.com/emmahrose/Festivities.git"><h3>festivities</h3></a>
     <p>This non pair catering website</p>
   </div>
 
