adding changes in my webpage

--- a/index.html
+++ b/index.html
@@ -1,89 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My webpage</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
+<head>
+  <meta charset="utf-8">
+  <title>My webpage</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
 
-  </head>
-  <body>
+<body>
 
   <div class="container">
     <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="about.html">About</a></li>
-            <li role="presentation"><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Emmah<strong>Rose</strong></h3>
-      </div>
-
-      <div class="jumbotron">
-          <h1>The Queen of the Hills</h1>
-          <p class="lead">A girl you would love to hang out with</p>
-          <!-- <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p> -->
-        </div>
-        <div class="row">
-    <div class="col-md-12">
-        <div class="img-responsive">
-            <img src="img/emmah.jpg" height="200" width="200" alt="img">
-        </div>
-     </div>
-</div>
-      <!-- <h1>emmah rose<h1>
-
-    <a href="about"></a>
-    <a href="contact"></a>
-
-    <ul class="nav.nav-pills">
-      <li>
-        <a href="about.html">About<a>
-      </li>
-      <li>
-      <a href="contact.html">contact<a>
-      </li>
-    </ul> -->
-  <div class="well">
-    <h2>Introduction</h2>
-    <p>Am so awesome and love listening to music</p>
-  </div>
-     <div class="well">
-  <h2>List of project done</h2>
-  <ul>
-    <li>My-first-website</li>
-    <li>Branches-webproject</li>
-    <li>Media-query</li>
-    <li>bootstrap-practice</li>
-    <li>Festivities</li>
-  </ul>
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="about.html">About</a></li>
+          <li role="presentation"><a href="contact.html">Contact</a></li>
+          <li role="presentation"><a href="activities.html">Activities</a></li>
+        </ul>
+      </nav>
+      <h3 class="text-muted">Emmah<strong>Rose</strong></h3>
     </div>
-<div class="panel">
 
-  <a href="https://github.com/emmahrose/my-first-webpage.git"><h3>My-first-website</h3></a>
-  <p>It is website that brings out the use off commind lines and creating the HTML.
-  </p>
+
   </div>
-  <div class="panel">
+</body>
 
-    <a href="https://github.com/emmahrose/branches-webproject.git"><h3>Branches-webproject</h3></a>
-    <p>This website shows how branching is done</p>
-  </div>
-  <div class="panel">
-
-    <a href="https://github.com/emmahrose/media-queary.git"><h3>Media-query</h3></a>
-    <p>This website show how media query is done</p>
-  </div>
-  <div class="panel">
-    
-    <a href="https://github.com/emmahrose/Festivities.git"><h3>festivities</h3></a>
-    <p>This non pair catering website</p>
-  </div>
-
-
-    </div>
-  </body>
 </html>
