updating and making changes in my webpage

--- a/about.html
+++ b/about.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>about me</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-  <h1>Emmahrose</h1>
-  <p>Emmahrose is a kenyan citizen, student,entreprenuer and also a co-owner of
-    omexIT company.She is a kind-hearted caring individual that looks out for
-    others and always looking out for family.
-   she has a good view on life and the happiest</p>
 
-  <h3 style="color: blue">Occupation</h3>
+<head>
+  <meta charset="utf-8">
+  <title>about me</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+</head>
+
+<body class="container">
+  <div class="header">
+    <nav>
+      <ul class="nav nav-pills pull-right">
+        <li role="presentation"><a href="index.html">Home</a></li>
+        <li role="presentation"><a href="activities.html">Activities</a></li>
+        <li role="presentation" class="active"><a href="about.html">About</a></li>
+        <li role="presentation"><a href="contact.html">Contact</a></li>
+
+      </ul>
+    </nav>
+    <h3>Emmah<strong>Rose</strong></h3>
+  </div>
+
+  <h1 id="occupation">Do You Want To Know More...?</h1>
+  <p>
+    Emmahrose is a kenyan citizen, student,entreprenuer and also a co-owner of omexIT company.She is a kind-hearted caring individual that looks out for others and always looking out for family. she has a good view on life and the happiest
+  </p>
+
+  <h3 id="occupation">Occupation</h3>
   <ul>
     <li>Software Developer</li>
   </ul>
-  <div class="panel">
-    <h3 style="color: blue">Hobbies</h3>
+  <div>
+    <h3 id="occupation">Hobbies</h3>
     <ul>
       <li>Reading novel</li>
       <li>Traveling</li>
       <li>watching movies</li>
     </ul>
   </div>
-   <div class="panel">
-     <h3 style="color: blue>Residence</h3>
-     <ul>
-       <li>Nairobi and Busia</li>
+  <div class="footer navbar navbar-fixed-bottom container">
+    copyright: Emmahrose 2017
+  </div>
+</body>
 
-     </ul>
-   </div>
-  </body>
 </html>
