--- a/activities.html
+++ b/activities.html
@@ -1,38 +1,62 @@
-<div class="well ">
-  <h2>Introduction</h2>
-  <p>Am so awesome and love listening to music</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Activities</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation"><a href="index.html">Home</a></li>
+          <li role="presentation" class="active"><a href="activities.html">Activities</a></li>
+          <li role="presentation"><a href="about.html">About</a></li>
+          <li role="presentation"><a href="contact.html">Contact</a></li>
+
+        </ul>
+      </nav>
+      <h3>Emmah<strong>Rose</strong></h3>
+    </div>
+    <div>
+
+      <p><i>Am so awesome and love listening to music<i></p>
 
 
-  <h2>List of project done</h2>
-  <ul>
-    <li>My-first-website</li>
-    <li>Branches-webproject</li>
-    <li>Media-query</li>
-    <li>bootstrap-practice</li>
-    <li>Festivities</li>
-  </ul>
-</div>
-<div class="panel ">
-
-  <a href="https://github.com/emmahrose/my-first-webpage.git "><h3>My-first-website</h3></a>
-  <p>It is website that brings out the use off commind lines and creating the HTML.
-  </p>
-</div>
-<div class="panel ">
-
-  <a href="https://github.com/emmahrose/branches-webproject.git "><h3>Branches-webproject</h3></a>
-  <p>This website shows how branching is done</p>
-</div>
-<div class="panel ">
-
-  <a href="https://github.com/emmahrose/media-queary.git "><h3>Media-query</h3></a>
-  <p>This website show how media query is done</p>
-</div>
-<div class="panel ">
-
-  <a href="https://github.com/emmahrose/Festivities.git "><h3>festivities</h3></a>
-  <p>This non pair catering website</p>
-</div>
+      <h3 id="occupation">List of project done</h3>
+      <ul>
+        <li>My-first-website</li>
+        <li>Branches-webproject</li>
+        <li>Media-query</li>
+        <li>bootstrap-practice</li>
+        <li>Festivities</li>
+      </ul>
+    </div>
 
 
-</div>
+      <a href="https://github.com/emmahrose/my-first-webpage.git "><h3 id="occupation">My-first-website</h3></a>
+      <p>It is website that brings out the use off commind lines and creating the HTML.</p>
+
+
+
+      <a href="https://github.com/emmahrose/branches-webproject.git "><h3 id="occupation">Branches-webproject</h3></a>
+      <p>This website shows how branching is done</p>
+
+
+      <a href="https://github.com/emmahrose/media-queary.git "><h3 id="occupation">Media-query</h3></a>
+      <p>This website show how media query is done</p>
+
+
+      <a href="https://github.com/emmahrose/Festivities.git "><h3 id="occupation">festivities</h3></a>
+      <p>This non pair catering website</p>
+  
+
+
+  </div>
+</body>
+
+</html>
