--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Contacts</title>
-  </head>
-  <body>
-    <ul>
-      <li>phone: 0715677791</li>
-      <li>email: emmahrose@ymail.com</li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contacts</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation"><a href="index.html">Home</a></li>
+          <li role="presentation"><a href="activities.html">Activities</a></li>
+          <li role="presentation"><a href="about.html">About</a></li>
+          <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
+
+        </ul>
+      </nav>
+      <h3>Emmah<strong>Rose</strong></h3>
+    </div>
+    <div>
+      <h3 id="occupation">Reach me through the following contacts </h3>
+      <br><strong>Phone:</strong> 0715677791</br>
+      <br><strong>Email:</strong> emmahrose@ymail.com</br>
+    </div>
+  </div>
+</body>
+
 </html>
