--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
 <head>
   <meta charset="utf-8">
   <title>My webpage</title>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body id="mybody">
 
   <div class="container">
     <div class="header">
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="activities.html">Activities</a></li>
           <li role="presentation"><a href="about.html">About</a></li>
           <li role="presentation"><a href="contact.html">Contact</a></li>
-          <li role="presentation"><a href="activities.html">Activities</a></li>
+
         </ul>
       </nav>
-      <h3 class="text-muted">Emmah<strong>Rose</strong></h3>
+      <h3>Emmah<strong>Rose</strong></h3>
+
+    </div>
+    <div id="my-text" class="center-block">
+
+
+    </div>
+    <div id="tic" class="text-muted">
+      <h1><i>Hello! this is Emmah</h1> I'm a web Designer.......<i>
     </div>
 
 
